--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,9 @@ body {
 
 }
 
-.dropdown-menu {
-    display: flex !important;
+.dropdown-menu-flex {
     flex-direction: row;
+    display: flex;
 
 }
 
