--- a/css/style.css
+++ b/css/style.css
@@ -54,9 +54,9 @@ body {
 
 }
 
-.dropdown-menu-flex {
+.dropdown-menu {
+    display: flex !important;
     flex-direction: row;
-    display: flex;
 
 }
 
@@ -158,7 +158,6 @@ h2 {
 }
 
 .animals {
-
     padding-top: 30px;
     padding-bottom: 30px;
     justify-content: center;
@@ -175,12 +174,14 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    
 }
 
 .animals-carousel{
- flex-direction: column;
+flex-direction: column;
 justify-content: center;
 align-items: center;
+
 }
 .center{
     text-align: center;
@@ -291,6 +292,7 @@ height: 50vh;
 }
 
 .col.card{
- 
+    border: none !important;
 }
+
 
